--- a/senaite/senaite-pvc.yaml
+++ b/senaite/senaite-pvc.yaml
@@ -4,8 +4,8 @@ metadata:
   name: senaite-data-pvc
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 100Gi
-  storageClassName: smb
+  storageClassName: nfs
