--- a/senaite/db-deployment.yaml
+++ b/senaite/db-deployment.yaml
@@ -24,16 +24,18 @@ spec:
               value: senaiteuser
             - name: POSTGRES_PASSWORD
               value: senaitepass
-            - name: PGDATA
-              value: /var/lib/postgresql/data/pgdata
           ports:
             - containerPort: 5432
           volumeMounts:
             - name: postgres-data
               mountPath: /var/lib/postgresql/data
-              subPath: postgres
-
       volumes:
         - name: postgres-data
-          persistentVolumeClaim:
-            claimName: senaite-data-pvc
+          hostPath:
+            path: /var/lib/senaite-postgres
+            type: DirectoryOrCreate
+
+      # volumes:
+      #   - name: senaite-db-storage
+      #     persistentVolumeClaim:
+      #       claimName: senaite-db-pvc
