re engineered deployment to use docker-compose for ease of transfer to IT department

--- a/senaite/Dockerfile
+++ b/senaite/Dockerfile
@@ -1,3 +1,4 @@
 FROM senaite/senaite:v2.6.0
 
-COPY senaite.core.po /home/senaite/senaitelims/eggs/cp27mu/senaite.core-2.6.0-py2.7.egg/senaite/core/locales/en/LC_MESSAGES/senaite.core.po
+COPY senaite.core.po /home/senaite/senaitelims/eggs/cp27mu/senaite.core-2.6.0-py2.7.egg/senaite/core/locales/en_US/LC_MESSAGES/senaite.core.po
+COPY senaite.core.mo /home/senaite/senaitelims/eggs/cp27mu/senaite.core-2.6.0-py2.7.egg/senaite/core/locales/en_US/LC_MESSAGES/senaite.core.mo
