--- a/mealie/deployment.yaml
+++ b/mealie/deployment.yaml
@@ -16,7 +16,14 @@ spec:
         app: mealie
     spec:
       containers:
-        - image: ghcr.io/mealie-recipes/mealie:v1.2.0
+        - image: ghcr.io/mealie-recipes/mealie:v3.9.2
           name: mealie
           ports:
             - containerPort: 9000
+          volumeMounts:
+            - mountPath: /app/data
+              name: mealie-data
+      volumes:
+        - name: mealie-data
+          persistentVolumeClaim:
+            claimName: mealie-data
