--- a/mealie/service.yaml
+++ b/mealie/service.yaml
@@ -1,20 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  creationTimestamp: null
-  labels:
-    app: mealie
   name: mealie
   namespace: mealie
+  labels:
+    app: mealie
 spec:
-  ports:
-  - name: 9001-9000
-    nodePort: 9001
-    port: 9001
-    protocol: TCP
-    targetPort: 9000
+  type: NodePort
   selector:
     app: mealie
-  type: NodePort
-status:
-  loadBalancer: {}
+  ports:
+    - name: http
+      port: 9000
+      targetPort: 9000
+      nodePort: 9001
+      protocol: TCP
